tests/invalid/Switch_Invalid_6.whiley
function f(int x) -> int:
    switch x:
        case 0:
        case 1:
            return x + 10
        case 2:
            return x + 12
        default:
    //
